--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -54,7 +54,7 @@ Theme Styles
 body {
   box-sizing: border-box;
   color:#373737;
-  background: #212121;
+  background: lightgrey;
   font-size: 16px;
   font-family: 'Myriad Pro', Calibri, Helvetica, Arial, sans-serif;
   line-height: 1.5;
