--- a/CompleteToolbar/toolbar.css
+++ b/CompleteToolbar/toolbar.css
@@ -20,97 +20,97 @@
 
 .bold
 {
-   background-image: url("content/Icons/text_bold.png"); 
+   background-image: url("Content/Icons/text_bold.png"); 
 }
 
 .italic
 {
-   background-image: url("content/Icons/text_italic.png"); 
+   background-image: url("Content/Icons/text_italic.png"); 
 }
 
 .underline
 {
-   background-image: url("content/Icons/text_underline.png"); 
+   background-image: url("Content/Icons/text_underline.png"); 
 }
 
 .blockquote
 {
-   background-image: url("content/Icons/text_padding_left.png"); 
+   background-image: url("Content/Icons/text_padding_left.png"); 
 }
 
 .textAlignLeft
 {
-   background-image: url("content/Icons/text_align_left.png"); 
+   background-image: url("Content/Icons/text_align_left.png"); 
 }
 
 .textAlignCenter
 {
-   background-image: url("content/Icons/text_align_center.png"); 
+   background-image: url("Content/Icons/text_align_center.png"); 
 }
 
 .textAlignRight
 {
-   background-image: url("content/Icons/text_align_right.png"); 
+   background-image: url("Content/Icons/text_align_right.png"); 
 }
 
 .h1
 {
-   background-image: url("content/Icons/text_heading_1.png"); 
+   background-image: url("Content/Icons/text_heading_1.png"); 
 }
 
 .h2
 {
-   background-image: url("content/Icons/text_heading_2.png"); 
+   background-image: url("Content/Icons/text_heading_2.png"); 
 }
 
 .h3
 {
-   background-image: url("content/Icons/text_heading_3.png"); 
+   background-image: url("Content/Icons/text_heading_3.png"); 
 }
 
 .h4
 {
-   background-image: url("content/Icons/text_heading_4.png"); 
+   background-image: url("Content/Icons/text_heading_4.png"); 
 }
 
 .h5
 {
-   background-image: url("content/Icons/text_heading_5.png"); 
+   background-image: url("Content/Icons/text_heading_5.png"); 
 }
 
 .h6
 {
-   background-image: url("content/Icons/text_heading_6.png"); 
+   background-image: url("Content/Icons/text_heading_6.png"); 
 }
 
 .subscript
 {
-   background-image: url("content/Icons/text_subscript.png"); 
+   background-image: url("Content/Icons/text_subscript.png"); 
 }
 
 .superscript
 {
-   background-image: url("content/Icons/text_superscript.png"); 
+   background-image: url("Content/Icons/text_superscript.png"); 
 }
 
 .unorderedList
 {
-   background-image: url("content/Icons/text_list_bullets.png"); 
+   background-image: url("Content/Icons/text_list_bullets.png"); 
 }
 
 .orderedList
 {
-   background-image: url("content/Icons/text_list_numbers.png"); 
+   background-image: url("Content/Icons/text_list_numbers.png"); 
 }
 
 .undo
 {
-   background-image: url("content/Icons/arrow_undo.png"); 
+   background-image: url("Content/Icons/arrow_undo.png"); 
 }
 
 .redo
 {
-   background-image: url("content/Icons/arrow_redo.png"); 
+   background-image: url("Content/Icons/arrow_redo.png"); 
 }
 
 .insertLink
