Added support for plain text for both the editor and the toolbar.

--- a/Toolbar/Demo/demo.css
+++ b/Toolbar/Demo/demo.css
@@ -10,4 +10,15 @@
     float: left;
     border: 1px black solid;
     padding: 2px;
+    margin: 4px 1px;
+}
+
+.configuration div 
+{
+    display: inline-block;
+    vertical-align: top;    
+}
+
+.editorconfiguration{
+    border-right: 1px solid black;
 }
