--- a/Demo/SingleToolbarMultipleEditors/toolbar.css
+++ b/Demo/SingleToolbarMultipleEditors/toolbar.css
@@ -16,17 +16,18 @@
 {
    
 }
-.tooltip {
-    position: absolute;
-    background-color: lightblue;
-    line-height: 12px;
-    font-size: 10px;
-}
 
 .btn 
 {
     display: inline-block;
     border: grey 1px solid;
+}
+
+.tooltip {
+    position: absolute;
+    background-color: lightblue;
+    line-height: 12px;
+    font-size: 10px;
 }
 
 .bold
@@ -129,9 +130,9 @@
     background-image: url("Content/Icons/link_add.png");  
 }
 
-.diabled
+.disabled
 {
-    background-color: gray;
+    opacity: .5;
 }
 
 .selected
