Fix typo: curier -> courier

--- a/Demo/Resources/arte.css
+++ b/Demo/Resources/arte.css
@@ -85,9 +85,9 @@
     font-family: "times new roman";
 }
 
-.arte-font-family-curier-new
+.arte-font-family-courier-new
 {
-    font-family: "curier-new";
+    font-family: "Courier New";
 }
 
 .arte-font-family-arial
