--- a/examples/blog/blog.css
+++ b/examples/blog/blog.css
@@ -1,3 +1,12 @@
+.blog-post-content
+{
+	height: 100px;
+	width: 400px;
+	overflow: auto;
+	border: 1px solid black;
+	background-color: #EFEFEF;
+}
+
 .toolbar
 {
 	border: 1px dotted black;
